--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@next/font": "^14.2.10",
+    "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.56.0",
     "@web3modal/wagmi": "^5.1.7",
     "encoding": "^0.1.13",
@@ -29,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "viem": "^2.21.6",
     "wagmi": "^2.12.11"
   },
