--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@dreyerxswap/default-token-list": "^1.0.0",
+    "@dreyerxswap/v2-sdk": "^1.0.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@ethersproject/providers": "^5.7.2",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
@@ -21,8 +23,11 @@
     "@next/font": "^14.2.10",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.56.0",
+    "@uniswap/sdk-core": "^5.4.0",
+    "@uniswap/v2-core": "^1.0.1",
     "@web3modal/wagmi": "^5.1.7",
     "encoding": "^0.1.13",
+    "ethers": "^6.13.2",
     "framer-motion": "^11.5.4",
     "next": "14.2.10",
     "pino-pretty": "^11.2.2",
