--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.56.0",
     "@uniswap/sdk-core": "^5.4.0",
     "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@web3modal/wagmi": "^5.1.7",
     "encoding": "^0.1.13",
     "ethers": "^6.13.2",
