--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "use-debounce": "^10.0.3",
     "viem": "^2.21.6",
     "wagmi": "^2.12.11"
   },
