--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@next/font": "^14.2.10",
     "@reduxjs/toolkit": "^2.2.7",
-    "@tanstack/react-query": "^5.56.0",
+    "@reown/appkit": "^1.0.7",
+    "@reown/appkit-adapter-wagmi": "^1.0.7",
+    "@tanstack/react-query": "^5.59.0",
     "@uniswap/sdk-core": "^5.4.0",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "@web3modal/wagmi": "^5.1.7",
     "encoding": "^0.1.13",
     "ethers": "^6.13.2",
     "framer-motion": "^11.5.4",
@@ -38,8 +39,8 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "use-debounce": "^10.0.3",
-    "viem": "^2.21.6",
-    "wagmi": "^2.12.11"
+    "viem": "^2.21.18",
+    "wagmi": "^2.12.17"
   },
   "devDependencies": {
     "@types/node": "^20",
